# Ouroboros

./: Ouroboros.cabal  Ouroboros.sublime-project  Ouroboros.sublime-workspace  c17.bench  c17.bench.out  c17.dot  c17.flt  c17.out.bench  c17.out.dot
.dist-buildwrapper/: Ouroboros.cabal
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage
.dist-buildwrapper/src/Ouroboros/: .Language.hs.bwinfo  .Language.hs.bwusage  Language.hs
src/: Main.hs
src/Ouroboros/: Bench.hs  Common.hs  Fault.hs  Graphviz.hs  Language.hs  Parser.hs  Scheme.hs  Test.hs
src/Ouroboros/Bench/: Language.hs  Parser.hs
src/Ouroboros/Fault/: Language.hs  Parser.hs
src/Ouroboros/Graphviz/: Language.hs
src/Ouroboros/Scheme/: Common.hs  Concatenate.hs  Copy.hs  Deafen.hs  Definition.hs  FromScheme.hs  RemoveRecursion.hs  ToScheme.hs
src/Ouroboros/Test/: Language.hs  Parser.hs
